force-app/main/default/objects/Training_Template_Selector__mdt/Training_Template_Selector__mdt.object-meta.xml
<CustomObject>
    <description>Houses training templates, allowing for accurate choice driven by input data.</description>
    <label>Training Document Template Selector</label>
    <pluralLabel>Training Template Selectors</pluralLabel>
</CustomObject>