force-app/main/default/objects/Training_Template_Selector__mdt/fields/Conga_Query_Name__c.field-meta.xml
<CustomField>
    <fullName>Conga_Query_Name__c</fullName>
    <description>Query name used for querying the Conga Query object record</description>
    <label>Conga Query Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>