force-app/main/default/objects/Training_Template_Selector__mdt/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Represents the selected document classification.</description>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>