force-app/main/default/objects/Training_Template_Selector__mdt/fields/Educator_Type_CC__c.field-meta.xml
<CustomField>
    <fullName>Educator_Type_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Educator Type CC</label>
    <type>Checkbox</type>
</CustomField>