force-app/main/default/objects/Training_Template_Selector__mdt/fields/Educator_Type_CPT__c.field-meta.xml
<CustomField>
    <fullName>Educator_Type_CPT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Educator Type CPT</label>
    <type>Checkbox</type>
</CustomField>