force-app/main/default/objects/Training_Template_Selector__mdt/fields/Educator_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Educator_Type_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Educator Type Other</label>
    <type>Checkbox</type>
</CustomField>