force-app/main/default/objects/Training_Template_Selector__mdt/fields/Follow_Up_Training__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-Up Training</label>
    <type>Checkbox</type>
</CustomField>