force-app/main/default/objects/Training_Template_Selector__mdt/fields/Insulin_Start_Training__c.field-meta.xml
<CustomField>
    <fullName>Insulin_Start_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insulin Start Training</label>
    <type>Checkbox</type>
</CustomField>