force-app/main/default/objects/Training_Template_Selector__mdt/fields/Is_Query_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_Query_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Refers that query is allowed in the Template or not</description>
    <label>Is Query Allowed</label>
    <type>Checkbox</type>
</CustomField>