force-app/main/default/objects/Training_Template_Selector__mdt/fields/Pre_Pod_and_Insulin_Start_Training__c.field-meta.xml
<CustomField>
    <fullName>Pre_Pod_and_Insulin_Start_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Pod and Insulin Start Training</label>
    <type>Checkbox</type>
</CustomField>