force-app/main/default/objects/Training_Template_Selector__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DASH</fullName>
            </value>
            <value>
                <fullName>OmniPod 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>